2005-07-22 Alasdair Allan <aa@astro.ex.ac.uk>

        * Changes to support running more than one node agent on a machine
          at once. This may have broken many things, hopefully not!
          
        * bin/raptor_gateway.pl: Skeleton for RAPTOR gateway  

2005-07-01 Alasdair Allan <aa@astro.ex.ac.uk> &
           Brad Cavanagh <bradc@jach.hawaii.edu> 

        * bin/interleave_daemon.pl: Added skeleton of the interleave
	  correlation daemon which now queries the DB web service to
	  grab the reference catalogue.
          
2005-07-01 Alasdair Allan <aa@astro.ex.ac.uk>

        * WFCAM/Handler.pm: Added query_db() cone search functionality
	
2005-06-30 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/data_miner.pl: Added data mining server process and associated
	  infrastructure to the wfcam_agent.pl.
	  
	* Changed catalogue shipping between the WFCAM processes to be gzipped
	  and base 64 encoded, this speeds thinsg up a lot. 
	  
	* Changed catalogue shipping between EFCAM processes to use Storable
	  rather the Data::Dumper, this makes things a lot faster again.
	  
	* Initial skeleton seems to work okay...     

2005-06-28 Alasdair Allan <aa@astro.ex.ac.uk>

        * Config/Simple.pm: Added a massively hacked version of Config::Simple
	  to the build. The real Config::Simple proved to be "not thread safe"
	  and I've had to totally reengineer the internals. This was not a
	  pleasant experience.
	  
2005-06-25 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/correlation_daemon.pl: Added SOAP client to push catalogues
	  to the wfcam_agent.pl
	  
	* bin/wfcam_agent.pl: populate_db() method now recieves 'n' serialised
	  Astro::Catalog obejcts. Current serialisation method is using the
	  standard Data::Dumper object. This was a lot harder than it sounds!  

2005-06-03 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/correlation_daemon.pl: Over the course of the last week
	  integrated the new features of Astro::Catlog V4 into the