@@ -21,22 +21,21 @@ my $status;
 
 =head1 NAME
 
-C<raptor_gateway.pl> - Embedded Agent for gateway to RAPTOR/TALON
+C<raptor_alert.pl> - Handles incoming events from RAPTOR
 
 =head1 SYNOPSIS
 
-   raptor_gateway.pl [-vers]
+   raptor_alert.pl [-vers]
 
 =head1 DESCRIPTION
 
-C<raptor_gateway.pl> is a persitent component of the the eSTAR Intelligent 
-Agent Client Software. The C<raptor_gateway.pl> is an embedded SOAP to
-TCP/IP socket translation layer, which also handles external phase zero
-requests for the RAPTOR/TALON telescopes.
+C<raptor_alert.pl> is a persitent component of the the eSTAR Intelligent 
+Agent Client Software. The C<raptor_alert.pl> is an simple gateway for
+incoming alerts from the RAPTOR system.
 
 =head1 REVISION
 
-$Id: raptor_gateway.pl,v 1.9 2005/07/26 16:28:01 aa Exp $
+$Id: raptor_alert.pl,v 1.1 2005/07/26 16:28:01 aa Exp $
 
 =head1 AUTHORS
 
@@ -53,12 +52,12 @@ Copyright (C) 2005 University of Exeter. All Rights Reserved.
 #  Version number - do this before anything else so that we dont have to 
 #  wait for all the modules to load - very quick
 BEGIN {
-  $VERSION = sprintf "%d.%d", q$Revision: 1.9 $ =~ /(\d+)\.(\d+)/;
+  $VERSION = sprintf "%d.%d", q$Revision: 1.1 $ =~ /(\d+)\.(\d+)/;
  
   #  Check for version number request - do this before real options handling
   foreach (@ARGV) {
     if (/^-vers/) {
-      print "\neSTAR RAPTOR Gateway Software:\n";
+      print "\neSTAR RAPTOR Alert Software:\n";
       print "Agent Version $VERSION; PERL Version: $]\n";
       exit;
     }
@@ -92,8 +91,7 @@ use eSTAR::Process;
 use eSTAR::Config;
 use eSTAR::UserAgent;
 use eSTAR::RTML;
-use eSTAR::RTML::Parse;
-use eSTAR::RTML::Build;
+use Astro::VO::VOEvent;
 
 #
 # Config modules
@@ -111,16 +109,14 @@ use Config;
 use Data::Dumper;
 use Getopt::Long;
 
-my ( $name, $cmd_soap_port, $cmd_tcp_port );   
-GetOptions( "name=s" => \$name,
-            "soap=s" => \$cmd_soap_port,
-            "tcp=s"  => \$cmd_tcp_port );
+my $name;
+GetOptions( "name=s" => \$name );
 
 my $process_name;
 if ( defined $name ) {
-  $process_name = "raptor_gateway_" . $name;
+  $process_name = "raptor_alert_" . $name;
 } else { 
-  $process_name = "raptor_gateway";
+  $process_name = "raptor_alert";
 }  
 
 # tag name of the current process, this identifies where log and 
@@ -130,10 +126,6 @@ my $process = new eSTAR::Process( $process_name );
 # tag name of the current process, this identifies where log and 
 # status files for this process will be stored.
 $process->set_version( $VERSION );
-
-# need to use the generic "node_agent" urn instead of the process
-# id in this case...
-$process->set_urn( "node_agent" );
 
 # C A T C H   S I G N A L S -------------------------------------------------
 
@@ -161,7 +153,7 @@ $log = new eSTAR::Logging( $process->get_process() );
 $log->set_debug(ESTAR__DEBUG);
 
 # Start of log file
-$log->header("Starting RAPTOR Gateway: Version $VERSION");
+$log->header("Starting RAPTOR Alert: Version $VERSION");
 
 # Check for threading
 $log->debug("Config: useithreads = " . $Config{'useithreads'});
@@ -284,8 +276,7 @@ use Net::FTP;
 #
 # eSTAR modules
 #
-use eSTAR::RAPTOR::SOAP::Daemon;  
-use eSTAR::RAPTOR::SOAP::Handler; # SOAP layer ontop of handler class
+
 
 # M A K E   D I R E C T O R I E S -------------------------------------------
 
@@ -318,19 +309,11 @@ if ( $config->get_state("gateway.unique_process") == 1 ) {
    $config->set_option("user.user_name", $ENV{"USER"} );
    $config->set_option("user.real_name", $real_name );
    $config->set_option("user.email_address", $ENV{"USER"}."@".hostdomain());
-    
-   # SOAP server parameters
-   $config->set_option( "soap.host", $ip );
-   if ( defined $cmd_soap_port ) {
-      $config->set_option( "soap.port", $cmd_soap_port );
-   } else {
-      $config->set_option( "soap.port", 8080 );
-   }  
-   
+ 
    # RAPTOR server parameters
    #$config->set_option( "raptor.host", "144.173.229.16" );
    $config->set_option( "raptor.host", "144.173.229.236" );
-   $config->set_option( "raptor.port", 5170 );
+   $config->set_option( "raptor.port", 43002 );
    
    # interprocess communication
    $config->set_option( "ua.user", "agent" );
@@ -369,7 +352,7 @@ my $lwp = new LWP::UserAgent(
 
 # Configure User Agent                         
 $lwp->env_proxy();
-$lwp->agent( "eSTAR RAPTOR Gateway Daemon /$VERSION (" 
+$lwp->agent( "eSTAR RAPTOR Alert Daemon /$VERSION (" 
             . hostname() . "." . hostdomain() .")");
 
 my $ua = new eSTAR::UserAgent(  );  
@@ -384,165 +367,46 @@ $ua->set_ua( $lwp );
 # TCP/IP callback
 
 my $tcp_callback = sub {
-  my $message = shift;  
+  my $message = shift;    
   my $thread_name = "TCP/IP";
   $log->thread2($thread_name, "Callback from TCP client...");
   $log->thread2($thread_name, "Handling broadcast message from RAPTOR");
 
-  unless ( $message =~ /RTML/ ) {
-     $log->debug( "Message is not RTML, not forwarded..." );
-     if ( $message =~ /VOEvent/ ) {
-       $log->debug( "Message may be a VOEvent message?" );
-     }
-     $log->debug( "Returning ESTAR__OK, exiting callback...");
-     return ESTAR__OK;
-  }     
 
-  # This should be an RTML message, lets check.
-  my $rtml;
-  eval { $rtml = new eSTAR::RTML( Source => $message ) };
-  if ( $@ ) {
-     $log->error( "Error: $@" );
-     $log->warn( "Warning: Unable to parse RAPTOR reply...");
-     $log->warn( "$message");
-     $log->warn( "Warning: Returning ESTAR__FAULT, exiting callback...");
-     return ESTAR__FAULT;
-  }
-  
-  unless ( defined $rtml ) {
-     $log->warn( "Warning: Unable to parse RAPTOR reply...");
+  $log->debug( "Testing to see whether we have an RTML document" );
+  if ( $message =~ /RTML/ ) {
+     my $rtml;
+     eval { $rtml = new eSTAR::RTML( Source => $message ) };
+     $log->warn( "Warning: Document identified as RTML..." );
+     my $type = $rtml->determine_type();
+     $log->warn( "Warning: Recieved RTML message of type '$type'" );  
      $log->warn( "$message");       
      $log->warn( "Warning: Returning ESTAR__FAULT, exiting callback...");
-     return ESTAR__FAULT;
-  }
-   
-  my $type = $rtml->determine_type();
-  $log->debug( "Recieved RTML message of type '$type'" );   
-
-  unless( $type eq 'update' || $type eq 'complete' ||
-          $type eq 'incomplete' || $type eq 'fail' ) {
-          
-     $log->warn( "Warning: Message of type $type not forwarded" );
-     $log->debug( "Returning ESTAR__OK, exiting callback..." );
-     return ESTAR__OK;
-  }
-  
-  #$log->debug( Dumper( $rtml ) );
-  
-  # GRAB MESSAGE
-  # ------------
-  my $parse = new eSTAR::RTML::Parse( RTML => $rtml );
-  my $host = $parse->host();
-  my $port = $parse->port();
-     
-  # SEND TO USER_AGENT
-  # ------------------
-              
-  # end point
-  my $endpoint = "http://" . $host . ":" . $port;
-  my $uri = new URI($endpoint);
-  
-  # create a user/passwd cookie
-  my $cookie = eSTAR::Util::make_cookie( $config->get_option( "ua.user" ), 
-                            $config->get_option( "ua.passwd" ) );
-   
-  my $cookie_jar = HTTP::Cookies->new();
-  $cookie_jar->set_cookie( 0, user => $cookie, '/', 
-                             $uri->host(), $uri->port());
-
-  # create SOAP connection
-  my $soap = new SOAP::Lite();
-  
-  $soap->uri('urn:/user_agent'); 
-  $soap->proxy($endpoint, cookie_jar => $cookie_jar);
-   
-  # report
-  $log->print("Connecting to " . $host . "..." );
-  
-  # fudge RTML document? 
-  $message =~ s/</&lt;/g;
-      
-  # grab result 
-  my $result;
-  eval { $result = $soap->handle_rtml(  
-              SOAP::Data->name('document', $message)->type('xsd:string') ); };
-  if ( $@ ) {
-     $log->error("Error: Failed to connect to " . $host );
+     return ESTAR__FAULT;     
   } else {
-    
-     # Check for errors
-     unless ($result->fault() ) {
-       $log->debug("Transport Status: " . $soap->transport()->status() );
-     } else {
-       $log->error("Fault Code   : " . $result->faultcode() );
-       $log->error("Fault String : " . $result->faultstring() );
-     }
-     
-     my $reply = $result->result();   
-     $log->debug("Got a '" . $reply . "' message from $host" ); 
+     $log->debug( "Does look like the document is an RTML message..." );
+  }   
   
-  }     
+  if ( $message =~ /VOEvent/ ) {
+  }
+
+  # It really, really should be a VOEvent message
+  $log->debug( "Testing to see whether we have a VOEvent document..." );
+  my $voevent;
+  if ( $message =~ /VOEvent/ ) {
      
+     $log->print( $message );
+  
+  } else {
+     $log->warn( "Warning: Document unidentified..." );
+     $log->warn( "$message");       
+     $log->warn( "Warning: Returning ESTAR__FAULT, exiting callback...");
+     return ESTAR__FAULT;      
+  }  
+  
   $log->debug( "Returning ESTAR__OK, exiting callback..." );
   return ESTAR__OK;
 };
-
-
-# subroutines used by the SOAP server need to be defined here before we 
-# attempt to start the server, otherwise we'll get an undefined error 
-
-# SOAP SERVER
-# -----------
-
-# daemon process
-my $daemon;
-
-# the thread in which we run the server process
-my $listener_thread;
-
-# anonymous subroutine which starts a SOAP server which will accept
-# incoming SOAP requests and route them to the appropriate module
-my $soap_server = sub {
-   my $thread_name = "SOAP";
-   
-   # create SOAP daemon
-   $log->thread($thread_name, "Starting server on port " . 
-            $config->get_option( "soap.port") . " (\$tid = ".threads->tid().")");  
-   $daemon = eval { new eSTAR::RAPTOR::SOAP::Daemon( 
-                      LocalPort     => $config->get_option( "soap.port"),
-                      Listen        => 5, 
-                      Reuse         => 1 ) };   
-                    
-   if ($@) {
-      # If we restart the node agent process quickly after a crash the port 
-      # will still be blocked by the operating system and we won't be able 
-      # to start the daemon. Other than the port being in use I can't see
-      # why we're going to end up here.
-      my $error = "$@";
-      return "FatalError: $error";
-   };
-   
-   # print some info
-   $log->thread($thread_name, "SOAP server at " . $daemon->url() );
-
-   # handlers directory
-   my $handler = "eSTAR::RAPTOR::SOAP::Handler";
-   
-   # defined handlers for the server
-   $daemon->dispatch_with({ 'urn:/node_agent' => $handler });
-   $daemon->objects_by_reference( $handler );
-      
-   # handle it!
-   $log->thread($thread_name, "Starting handlers..."  );
-   $daemon->handle;
-
-};
-
-# S T A R T   S O A P   S E R V E R -----------------------------------------
-
-# Spawn the SOAP server thread
-$log->print("Spawning SOAP Server thread...");
-$listener_thread = threads->create( $soap_server );
 
 # O P E N   I N C O M I N G   C L I E N T  -----------------------------------
 
@@ -593,7 +457,7 @@ while( $flag ) {
          $log->debug( "Message is $length characters" );               
          $bytes_read = sysread( $sock, $response, $length); 
       
-         # callback to handle incoming RTML     
+         # callback to handle incoming Events     
          $log->print("Detaching callback thread..." );
          my $callback_thread = 
              threads->create ( $tcp_callback, $response );
@@ -625,10 +489,6 @@ redo SOCKET;
 # E N D 
 # ===========================================================================
 
-$status = $listener_thread->join() if defined $listener_thread;
-$log->warn( "Warning: SOAP Thread has been terminated abnormally..." );
-$log->error( $status );
-
 # tidy up
 END {
    # we must have generated an error somewhere to have gotten here,
@@ -640,8 +500,6 @@ END {
 # ===========================================================================
 # A S S O C I A T E D   S U B R O U T I N E S 
 # ===========================================================================
-
-
 
 # anonymous subroutine which is called everytime the user agent is
 # terminated (ab)normally. Hopefully this will provide a clean exit.
@@ -679,140 +537,8 @@ sub kill_agent {
 
 # T I M E   A T   T H E   B A R  -------------------------------------------
 
-# $Log: raptor_gateway.pl,v $
-# Revision 1.9  2005/07/26 16:28:01  aa
+# $Log: raptor_alert.pl,v $
+# Revision 1.1  2005/07/26 16:28:01  aa
 # Working RAPTOR gateway
-#
-# Revision 1.8  2005/07/26 11:35:59  aa
-# Bug fix
-#
-# Revision 1.7  2005/07/26 11:06:33  aa
-# Bug fix
-#
-# Revision 1.6  2005/07/26 11:06:21  aa
-# Bug fix
-#
-# Revision 1.5  2005/07/26 11:05:43  aa
-# Working RAPTOR Gateway, messages going from eSTAR to RAPTOR transit the gateway. Immediate responses, such as scoring and rejects are pushed back. However the gateway also holds open a continous socket connection to RAPTOR for update and complete messages to transit back on
-#
-# Revision 1.4  2005/07/26 11:02:51  aa
-# Working RAPTOR Gateway, messages going from eSTAR to RAPTOR transit the gateway. Immediate responses, such as scoring and rejects are pushed back. However the gateway also holds open a continous socket connection to RAPTOR for update and complete messages to transit back on
-#
-# Revision 1.3  2005/07/26 08:48:16  aa
-# Updated, now working?
-#
-# Revision 1.2  2005/07/25 17:30:13  aa
-# End of night check-in
-#
-# Revision 1.1  2005/07/22 17:18:06  aa
-# Skeleton for RAPTOR gateway
-#
-# Revision 1.8  2005/05/12 16:51:56  aa
-# Initial default set to LT
-#
-# Revision 1.7  2005/05/10 20:45:44  aa
-# Fixed bogus XML problem? Not actually sure why this was occuring so added a kludge to get round it. Oh dear...
-#
-# Revision 1.6  2005/05/10 17:56:20  aa
-# Checkpoint save, see ChangeLog
-#
-# Revision 1.5  2005/05/09 12:39:21  aa
-# Fixed buffer overflow error in node_agent.pl
-#
-# Revision 1.4  2005/05/05 13:54:40  aa
-# Working node_agent for LT and FTN. Changes to user_agent to support new RTML tags (see ChangeLog)
-#
-# Revision 1.3  2005/05/03 22:19:44  aa
-# Modified node_agent.pl to work with LT only
-#
-# Revision 1.2  2005/04/29 11:33:46  aa
-# Fixed but where the thread was silently dying because it couldn't find make_cookie() in eSTAR::Util::make_cookie() . I had this problem with the user_agent as well, and I still don't know how to fix it so I actually get proper error messages back.
-#
-# Revision 1.1  2005/04/29 09:29:46  aa
-# Added a port of the node_agent.pl and associated modules
-#
-# Revision 1.27  2003/08/19 18:57:35  aa
-# Created eSTAR::Util class, moved general methods to this class. Moved the
-# infrastructure to support the new Astro::Catalog V3.* API. Tested user agent
-# against the old node agent installed on dn2.astro.ex.ac.uk, but the JAC
-# and node agent have not been tested (but should work).
-#
-# Revision 1.26  2003/06/27 14:23:59  aa
-# Modified node_agent to use raw IP addresses rather than hostnames
-#
-# Revision 1.25  2003/06/24 14:23:03  aa
-# Modified query_webcam() to use SOAP::MIME
-#
-# Revision 1.24  2003/06/11 04:45:18  aa
-# Shipping to dn2.astro.ex.ac.uk
-#
-# Revision 1.23  2003/06/11 04:38:49  aa
-# Forgot to detach()
-#
-# Revision 1.22  2003/06/11 04:37:10  aa
-# Multi-trheading the tcp/ip callbacks in node_agent
-#
-# Revision 1.21  2003/06/09 04:37:48  aa
-# End of night(!) check-in, added basic handling of retruned obsverations
-#
-# Revision 1.20  2003/06/06 15:21:58  aa
-# Added quety_schedule() method
-#
-# Revision 1.19  2003/06/05 17:20:12  aa
-# Added ldap_query method
-#
-# Revision 1.18  2003/06/04 17:41:27  aa
-# shipping to dn2.astro.ex.ac.uk
-#
-# Revision 1.17  2003/06/04 17:11:53  aa
-# Shipping dn2.astro.ex.ac.uk
-#
-# Revision 1.16  2003/06/04 16:39:10  aa
-# Added read only access to lookup.dat file
-#
-# Revision 1.15  2003/06/04 16:30:23  aa
-# Still trying to fix the fudge on returned messages
-#
-# Revision 1.14  2003/06/04 16:26:41  aa
-# Fixed node_agent to re-fudge the IA's host and port
-#
-# Revision 1.13  2003/06/04 16:11:56  aa
-# Ongoing HTTP::Cookie problem fixed?
-#
-# Revision 1.12  2003/06/04 15:47:54  aa
-# Shipping to dn2.astro.ex.ac.uk
-#
-# Revision 1.11  2003/06/04 15:32:59  aa
-# Added a use Digest::MD5 'md5_hex'
-#
-# Revision 1.10  2003/06/04 15:30:04  aa
-# Interim checkin, added make_cookie() routine to node_agent
-#
-# Revision 1.9  2003/06/04 15:03:48  aa
-# Moved all handle_rtml() calls to use xsd:string's and manually fudged RTML
-#
-# Revision 1.8  2003/06/04 07:45:24  aa
-# bug fix to node_agent tcp_callback()
-#
-# Revision 1.7  2003/06/04 07:43:49  aa
-# bug fix to node_agent tcp_callback()
-#
-# Revision 1.6  2003/06/04 07:40:33  aa
-# Closed loop?
-#
-# Revision 1.5  2003/06/04 00:27:32  aa
-# Interim update to ship to dn2.astro.ex.ac.uk
-#
-# Revision 1.4  2003/06/03 23:29:38  aa
-# Interim checkin, pre-test on dn2.astro.ex.ac.uk
-#
-# Revision 1.3  2003/06/03 12:32:01  aa
-# Added RTML host and port fudging for incoming SOAP messages
-#
-# Revision 1.2  2003/06/02 18:32:25  aa
-# node_agent.pl now exits cleanly
-#
-# Revision 1.1  2003/06/02 17:59:40  aa
-# Inital DN embedded agent, non-functional, problem with TCP client/server
 #
 
