@@ -16,7 +16,7 @@ BEGIN {
   # class. The local versions catch errors that would otherwise be
   # simple text, and turn them into SOAP::Fault objects.
   
-  for my $method qw(ping handle_rtml) {
+  for my $method qw(ping handle_rtml handle_voevent) {
      eval "sub $method";
      *$method = sub {
         my $self = shift->new();
